# name-parser-rust

./: .gitignore  BENCHMARKS.md  Cargo.toml  DISTRIBUTION.md  Jenkinsfile  README.md  RELEASE.md  benchmarks.md  cross-validation.md  todo.md
.github/: dependabot.yml
.github/workflows/: ci.yml  cli-release.yml  crate-release.yml  python-release.yml
bindings/java/: README.md  pom.xml
bindings/java/jmh/: pom.xml  results-jmh-ab.json  results-jmh.json
bindings/java/jmh/src/main/java/org/gbif/nameparser/rust/jmh/: ParseBench.java
bindings/java/src/main/java/org/gbif/nameparser/rust/: Ffi.java  NameParserRust.java  StructCodec.java
bindings/java/src/test/java/org/gbif/nameparser/rust/: NameParserRustSmokeTest.java  ParityTest.java
bindings/r/: .Rbuildignore  DESCRIPTION  NAMESPACE  README.md
bindings/r/R/: extendr-wrappers.R  parse.R
bindings/r/man/: parse_name_json.Rd  parse_name_json_impl.Rd  parse_names.Rd  parse_names_impl.Rd
bindings/r/src/: Makevars.in  Makevars.win.in  entrypoint.c  nameparser-win.def
bindings/r/src/rust/: Cargo.toml  document.rs
bindings/r/src/rust/src/: lib.rs
bindings/r/tests/testthat/: test-parity.R  test-parse-names.R
ci/: build-cdylib.sh
crates/nameparser/: Cargo.toml  README.md
crates/nameparser-cli/: Cargo.toml  README.md
crates/nameparser-cli/src/: main.rs  validate.rs
crates/nameparser-cli/src/validate/: cache.rs  client.rs  mod.rs
crates/nameparser-cli/tests/: benchmark_cli.rs  compare_cli.rs  parse_cli.rs  validate_cli.rs
crates/nameparser-ffi/: Cargo.toml
crates/nameparser-ffi/src/: layout.rs  lib.rs
crates/nameparser-ffi/tests/: ffi_json.rs  ffi_struct.rs
crates/nameparser-py/: Cargo.toml  README.md  nameparser.pyi  pyproject.toml
crates/nameparser-py/python/tests/: _corpus.py  test_api.py  test_getter_consistency.py  test_parity.py
crates/nameparser-py/src/: lib.rs
crates/nameparser/benches/: parse.rs
crates/nameparser/resources/: README.md  culture-collections.txt
crates/nameparser/src/: format.rs  lib.rs  regexes.rs  token.rs  unicode.rs  viral.rs
crates/nameparser/src/model/: enums.rs  mod.rs  name.rs
crates/nameparser/src/pipeline/: assemble.rs  authorship_parser.rs  authorship_split.rs  blacklisted_epithets.rs  code_inference.rs  context.rs  culture_collections.rs  mod.rs  name_tokens.rs  preflight.rs  rank_markers.rs  stripandstash.rs
crates/nameparser/tests/: dsl_smoke.rs  format_golden.rs  gna_01.rs  gna_02.rs  gna_03.rs  gna_04.rs  gna_05.rs  gna_06.rs  identifier.rs  impl_01.rs  impl_02.rs  impl_03.rs  impl_04.rs  impl_05.rs  impl_06.rs  impl_07.rs  impl_08.rs  impl_09.rs  impl_10.rs  informal.rs  parse_golden.rs  tokenizer_golden.rs
crates/nameparser/tests/common/: mod.rs
docs/: non-scientific-names.md
docs/superpowers/findings/: 2026-07-09-phase0-spike-findings.md  2026-07-10-phase1-foundation-status.md  2026-07-11-phase1-phase2-status.md  2026-07-11-phase3-ffm-status.md  2026-07-11-phase4a-python-status.md  2026-07-11-phase4b-r-status.md  2026-07-11-phase4c-validate-status.md  2026-07-11-validate-java-recon.md  2026-07-13-verbatim-corpus-band-report.txt  2026-07-13-verbatim-corpus-informal-band.md
docs/superpowers/plans/: 2026-07-09-phase0-spike.md  2026-07-10-phase1-backend.md  2026-07-10-phase1-foundation.md  2026-07-10-phase1-nameparts.md  2026-07-10-phase1-stripandstash.md  2026-07-10-phase2-cli.md  2026-07-11-phase3-ffm-binding.md  2026-07-11-phase4a-python-binding.md  2026-07-11-phase4b-r-binding.md  2026-07-11-phase4c-validate.md
docs/superpowers/specs/: 2026-07-09-name-parser-rust-design.md  2026-07-14-nametype-identifier-design.md
scripts/: bump-version.sh  cross-validate.sh
testdata/golden/: expected-format.tsv  expected-parse.jsonl
testdata/golden-4.2.0/: expected-format.tsv  expected-parse.jsonl  expected-tokens.tsv
tools/: FormatOracle.java  README.md  TokenDump.java  band_analyze.py
