[package]
name = "nameparser-cli"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
publish = false
description = "Native command-line tools (parse/benchmark/compare) wrapping the nameparser crate — mirrors the Java name-parser-cli."

[[bin]]
name = "nameparser-cli"
path = "src/main.rs"

[dependencies]
nameparser = { path = "../nameparser" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
regex = "1"
