[package]
name = "nameparser-cli"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
publish = false
description = "Native command-line tools (parse/benchmark/compare) wrapping the nameparser crate — mirrors the Java name-parser-cli."

[[bin]]
name = "nameparser-cli"
path = "src/main.rs"

[dependencies]
nameparser = { package = "scientific-name-parser", path = "../nameparser" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
# `raw_value`: needed by `validate`'s `FieldIssue` coercion (Phase 4c Task 3) to capture a
# non-string JSON field value (object/array/number/bool) as its exact original source text —
# without it, round-tripping through `serde_json::Value` would lose key order on nested objects
# (this crate's `serde_json` has no `preserve_order` feature; see `render_row`'s doc comment in
# `src/main.rs` for the same order-safety concern elsewhere in this crate). Adds no new
# transitive dependency (unlike `preserve_order`, which would pull in `indexmap`).
serde_json = { version = "1", features = ["raw_value"] }
regex = "1"
ureq = "2"
sha2 = "0.10"
