[package]
name = "nameparser-ffi"
version.workspace = true
edition = "2021"
license = "Apache-2.0"
publish = false
description = "C-ABI cdylib exposing the nameparser crate to non-Rust callers (Phase 3: Java via FFM/Panama)."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nameparser = { package = "gbif-name-parser", path = "../nameparser" }
