[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "nameparser"
version = "0.0.0"
description = "GBIF scientific name parser — Rust core, Python binding"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }

[tool.maturin]
manifest-path = "crates/nameparser-py/Cargo.toml"
module-name = "nameparser"
features = ["pyo3/extension-module"]
