[package]
name = "nameparser"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
regex = "1.11"
fancy-regex = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "parse"
harness = false
