[package]
name = "gbif-name-parser"
version.workspace = true
edition = "2021"
license = "Apache-2.0"
publish = false

# The published/package name is `gbif-name-parser`, but the compiled lib target keeps
# its short name `nameparser` so every dependent's `use nameparser::` / `::nameparser::` and
# this crate's own integration tests/benches (`use nameparser::`) stay unchanged. Dependents
# select this crate by the package name (aliased back to `nameparser` where convenient).
[lib]
name = "nameparser"

[dependencies]
regex = "1.11"
fancy-regex = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "parse"
harness = false
