[package]
name = "gbif-name-parser"
version.workspace = true
edition = "2021"
license = "Apache-2.0"
description = "A faithful Rust port of the GBIF scientific name parser: parses scientific names into their structured atoms (genus, epithets, authorship, rank, nomenclatural code)."
repository = "https://github.com/gbif/name-parser-rust"
homepage = "https://github.com/gbif/name-parser-rust"
documentation = "https://docs.rs/gbif-name-parser"
readme = "README.md"
keywords = ["taxonomy", "biodiversity", "gbif", "nomenclature", "parser"]
categories = ["science", "parser-implementations"]

# The published/package name is `gbif-name-parser`, but the compiled lib target keeps
# its short name `nameparser` so every dependent's `use nameparser::` / `::nameparser::` and
# this crate's own integration tests/benches (`use nameparser::`) stay unchanged. Dependents
# select this crate by the package name (aliased back to `nameparser` where convenient).
[lib]
name = "nameparser"

[dependencies]
regex = "1.11"
fancy-regex = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Unicode NFD for NameFormatter's foldToAscii (canonicalMinimal); Java uses
# java.text.Normalizer.Form.NFD — this is the standard-compliant Rust equivalent.
unicode-normalization = "0.1"

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "parse"
harness = false
